--- a/src/styles/BlogStyle.scss
+++ b/src/styles/BlogStyle.scss
@@ -4,7 +4,33 @@ $pad10:10px;
 $pad25:25px;
 .blog-wrapper {
     padding: 20px;
-    .video-div {
+    .video-div,
+    .blog-image {
         background: $blogBG;
+    }
+    .video-wrapper {
+        position: relative;
+        border-radius: 5px;
+        .video-overlay {
+            position: absolute;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, .47);
+            width: 100%;
+            height: 100%;
+            display: none;
+            top: 0;
+            bottom: 0;
+        }
+        &:hover {
+            .video-overlay {
+                display: block;
+            }
+        }
+    }
+    video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
