--- a/src/styles/ModalStyles.css
+++ b/src/styles/ModalStyles.css
@@ -399,3 +399,6 @@ label {
     font-weight: 400;
     padding: 0 17%;
     margin-bottom: 25px; }
+
+.modal-backdrop.show {
+  opacity: 0.65 !important; }
