--- a/src/styles/VideosStyle.scss
+++ b/src/styles/VideosStyle.scss
@@ -8,13 +8,11 @@ $pad25:25px;
     .blog-image {
         background: $blogBG;
     }
-   
 }
 
 .video-wrapper {
     position: relative;
     border-radius: 5px;
-    
     .video-overlay {
         position: absolute;
         left: 0;
@@ -22,7 +20,7 @@ $pad25:25px;
         background: rgba(0, 0, 0, .47);
         width: 100%;
         height: 100%;
-        display: none!important;
+        display: none !important;
         top: 0;
         bottom: 0;
     }
@@ -33,68 +31,85 @@ $pad25:25px;
         border: 3px solid #fff;
         width: 55px;
         height: 55px;
-        line-height:55px;
-        border-radius:50%;
+        line-height: 55px;
+        border-radius: 50%;
         text-align: center;
         cursor: pointer;
-        &:hover{
-            border-color:$secondaryColor;
-            color:$secondaryColor;
+        position: relative;
+        z-index: 2;
+        &:hover {
+            border-color: $secondaryColor;
+            color: $secondaryColor;
         }
     }
     &:hover {
         .video-overlay {
-            display: flex!important;
+            display: flex !important;
+        }
+    }
+    .video-nav-wrapper {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 100%;
+        padding: 0 15px;
+        button {
+            background: transparent;
+            border: none;
+            color: $whiteColor;
+            font-size: 30px;
+            outline:none;
         }
     }
 }
+
 video {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.video-block{
+
+.video-block {
     margin-bottom: 20px;
     overflow: hidden;
-    .video-btm-play-icon{
+    .video-btm-play-icon {
         color: $whiteColor;
         font-size: 18px;
-        background:transparent;
-        border:none;
-        padding:0 5px;
+        background: transparent;
+        border: none;
+        padding: 0 5px;
         outline: none;
     }
-    .full-screen-btn{
+    .full-screen-btn {
         color: $whiteColor;
         font-size: 18px;
-        background:transparent;
-        border:none;
-        padding:0 5px;
+        background: transparent;
+        border: none;
+        padding: 0 5px;
         outline: none;
     }
 }
-.video-controls{
-    height:40px;
-    background:$primaryColor;
-    padding:5px 10px;
-    .left-controls{
-        flex:0 0 65px;
+
+.video-controls {
+    height: 40px;
+    background: $primaryColor;
+    padding: 5px 10px;
+    .left-controls {
+        flex: 0 0 65px;
     }
-    .slider-controls{
-        flex:0 0 40%;
+    .slider-controls {
+        flex: 0 0 40%;
     }
-    .right-controls{
-        flex:1;
+    .right-controls {
+        flex: 1;
     }
 }
 
-.video-modal{
-    &.modal-dialog{
-        max-width:75%;
+.video-modal {
+    &.modal-dialog {
+        max-width: 75%;
     }
-    
-    .video-block{
-        margin-bottom:0;
+    .video-block {
+        margin-bottom: 0;
     }
-
 }
